app.js -- using dom instead of html

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator -- DEMO</title>
+    <title>Calculator | Demo</title>
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/animation.css">
     <link rel="stylesheet" href="./style/hover.css">
     <link rel="stylesheet" href="./style/active.css">
     <link rel="stylesheet" href="./style/media-query.css">
     <link rel="stylesheet" href="./style/toast.css">
-    
+
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
@@ -25,42 +25,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main class="container">
-        <header>
-            <h1>Calculator</h1>
-        </header>
-        <section>
-            <div class="calc-grid">
-                <div class="output">
-                    <div class="output-history">70 + 30</div>
-                    <div class="output-results">= 100</div>
-                </div>
-                <button class="clear-button">C</button>
-                <button class="non-functionable">(</button>
-                <button class="non-functionable">)</button>
-                <button class="math_operation-button">x</button>
-                <button class="non-functionable">√</button>
-                <button class="non-functionable">%</button>
-                <button class="non-functionable">±</button>
-                <button class="math_operation-button">÷</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button class="math_operation-button">-</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button class="math_operation-button">+</button>
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button class="span-2-vertical equal-button">=</button>
-                <button>.</button>
-                <button>0</button>
-                <button>del</button>
-            </div>
-        </section>
-    </main>
+    <div id="root"></div>
     <script src="./app.js"></script>
+    <script src="./randomColorGenerator.js"></script>
 </body>
 </html>
