--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="./app.js"></script>
-    <script src="./randomColorGenerator.js"></script>
+    <script src="./js/randomColorGenerator.js"></script>
+    <script type="module" src="./js/app.js"></script>
+    <script type="module" src="./js/Calculator.js"></script>
+    <script type="modul" src="./js/functionPool.js"></script>
 </body>
 </html>
