--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator | Demo</title>
-    <link rel="stylesheet" href="./style/style.css">
-    <link rel="stylesheet" href="./style/animation.css">
-    <link rel="stylesheet" href="./style/hover.css">
-    <link rel="stylesheet" href="./style/active.css">
-    <link rel="stylesheet" href="./style/media-query.css">
-    <link rel="stylesheet" href="./style/toast.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
@@ -23,12 +17,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <div id="root"></div>
-    <script src="./js/randomColorGenerator.js"></script>
-    <script type="module" src="./js/app.js"></script>
-    <script type="module" src="./js/Calculator.js"></script>
-    <script type="modul" src="./js/functionPool.js"></script>
+    <script type="module" src="./build/bundle.js"></script>
 </body>
 </html>
