--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator | Demo</title>
+    <title>Calculator</title>
 
-    <link rel="stylesheet" href="../build/main.css">
-
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-    <link rel="manifest" href="./favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="../src/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../src/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../src/assets/favicon/favicon-16x16.png">
+    <!-- <link rel="manifest" href="../src/assets/favicon/site.webmanifest"> -->
     
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,6 +22,5 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="../build/bundle.js"></script>
 </body>
 </html>
